FEAT: add descriptions

--- a/22-save_and_load_model.ipynb
+++ b/22-save_and_load_model.ipynb
@@ -28,7 +28,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Save and Load Model"
+        "# Save and Load Model\n",
+        "PyTorch는 python의 pickle을 활용하여 직렬화(Serialize)하여 객체를 저장하고 역직렬화(Deserialize)를 통해 볼러올 수 있음."
       ],
       "metadata": {
         "id": "G1T65rU1JWxJ"
@@ -45,16 +46,69 @@
       "metadata": {
         "id": "zDomW-5Qu91a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
+        "### `torch.save` & `torch.load`\n",
+        "- 모델의 정보를 경로에 저장하고 불러옴.\n",
+        "- 모델 전체를 저장하거나 상태만 저장할 때 모두 사용됨.\n",
+        "- `map_location`을 활용하면 device에 상관없이 불러올 수 있음."
+      ],
+      "metadata": {
+        "id": "wdSSvBFkfNws"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 비교\n",
+        "### Save\n",
+        "- 전체: `torch.save(model, 'model.pt')`\n",
+        "- 상태: `torch.save(model.state_dict(), model_params.pt')`\n",
         "\n",
+        "### load\n",
+        "- 전체: `torch.load('model.pt')`\n",
+        "- 상태: `model.load_state_dict(torch.load('model_params.pt'))`"
+      ],
+      "metadata": {
+        "id": "MZSKk64Hg53X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Model(nn.Module):\n",
+        "  def __init__(self, n_in_f, n_out_f, w, b):\n",
+        "    super().__init__()\n",
+        "    init_weigths = torch.ones( (n_in_f, n_out_f) )\n",
+        "    init_bias = torch.zeros( (n_out_f,) )\n",
+        "\n",
+        "    self.l0 = nn.Linear(n_in_f, n_out_f)\n",
+        "\n",
+        "    init.constant_(self.l0.weight, w)\n",
+        "    if self.l0.bias is not None:\n",
+        "      init.constant_(self.l0.bias, b)\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    return self.l0(x)"
+      ],
+      "metadata": {
+        "id": "1Tpv8WqDyb9r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## 모델의 Parameters 저장\n",
+        "`state_dict`를 활용해 모델의 상태를 저장함.\n",
         "- Structure 등은 저장되지 않음.\n",
-        "- PyTorch 버전에 관계없이 사용 가능."
+        "- PyTorch 버전에 관계없이 사용 가능.\n",
+        "- 모델을 불러올 때 동일한 형태의 클래스가 선언되어 있어야 함."
       ],
       "metadata": {
         "id": "FqQj2A4boHD2"
@@ -95,30 +149,6 @@
       "metadata": {
         "id": "JlklNPYPuUbS"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class Model(nn.Module):\n",
-        "  def __init__(self, n_in_f, n_out_f, w, b):\n",
-        "    super().__init__()\n",
-        "    init_weigths = torch.ones( (n_in_f, n_out_f) )\n",
-        "    init_bias = torch.zeros( (n_out_f,) )\n",
-        "\n",
-        "    self.l0 = nn.Linear(n_in_f, n_out_f)\n",
-        "\n",
-        "    init.constant_(self.l0.weight, w)\n",
-        "    if self.l0.bias is not None:\n",
-        "      init.constant_(self.l0.bias, b)\n",
-        "\n",
-        "  def forward(self, x):\n",
-        "    return self.l0(x)"
-      ],
-      "metadata": {
-        "id": "1Tpv8WqDyb9r"
-      },
-      "execution_count": 11,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -169,7 +199,7 @@
         "id": "ult44kEoL3tH",
         "outputId": "53d0805b-840d-4cfa-8c38-904b7e17d3d6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,7 +260,7 @@
         "id": "2jUY-nTIu7ty",
         "outputId": "c394444f-b7ed-4221-fe25-1022a405089a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
