FEAT: add sigmoid vs. softmax

--- a/25-activation_functions.ipynb
+++ b/25-activation_functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3e4JFXxAJXGRijtIEjaTe",
+      "authorship_tag": "ABX9TyNzIOV9vn7bczRMNXyAWvJ3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "YV4m-pPHEwMa"
       },
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "ng1a8O5mY1Ry"
       },
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "97jfn9yxEiPs"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "sOr5xrLg7KXT",
         "colab": {
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "H3ELhbZrCCQQ",
         "colab": {
@@ -194,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "BNegXfGL7F6n",
         "colab": {
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "dMZ10BEQzzFz",
         "colab": {
@@ -261,13 +261,14 @@
         "## ReLU\n",
         "Rectified Linear Unit<br>\n",
         "$\\mathrm{max}(0, x)$\n",
+        "- 주로 은닉층의 활성화 함수로 사용됨.\n",
         "- (+) 영역에서 not saturate\n",
         "- `exp()`가 없기 때문에 계산 빠름\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "seHUEiZL68N4",
         "colab": {
@@ -291,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "sIieb_V31Ntu",
         "colab": {
@@ -340,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "POTCV-vo6jFv",
         "colab": {
@@ -364,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "ectXbU8y2gl9",
         "colab": {
@@ -415,6 +416,7 @@
       },
       "source": [
         "## Softmax\n",
+        "$y_k = \\cfrac{\\exp(a_k)}{\\displaystyle \\sum^n_{i=1}\\exp(a_i)}$<br>\n",
         "input에 대한 probability 값들을 가지는 vector를 출력.\n",
         "- vector의 모든 요소의 값을 더하면 1.\n",
         "- 입력 벡털르 확률 분포로 변환.\n",
@@ -423,7 +425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "csn_g1s3D1yN",
         "colab": {
@@ -448,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "2uzarNGKcQR9",
         "colab": {
@@ -488,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "uqwWFjPVSQtK",
         "colab": {
@@ -509,6 +511,22 @@
         "log_softmax_outputs = F.log_softmax(logits, dim=0)\n",
         "print('LogSoftmax outputs:', log_softmax_outputs)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Sigmoid vs. Softmax\n",
+        "$\\sigma(x) = \\cfrac{1}{1+e^{-x}}$\n",
+        "vs.\n",
+        "$y_k = \\cfrac{\\exp(a_k)}{\\displaystyle \\sum^n_{i=1}\\exp(a_i)}$<br>\n",
+        "- 두 함수 모두 값을 0~1 사이로 변환하여 출력.\n",
+        "- softmax는 **출력값들의 합이 1**이 되도록 하는 함수.\n",
+        "- sigmoid는 binary classification model의 마지막 활성화 함수\n",
+        "- sigmoid는 multi-label classification model의 마지막 활성화 함수"
+      ],
+      "metadata": {
+        "id": "x0M5qm0H19H7"
+      }
     }
   ]
 }
