RENAME: 24-sequential_modulelist_moduledict.ipynb -> 24-module_definition.ipynb

--- a/24-module_definition.ipynb
+++ b/24-module_definition.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPaWSFpHxSqRICCsjrRU1LQ",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/9-coding/PyTorch/blob/main/24-sequential_modulelist_moduledict.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -44,7 +32,7 @@
       "metadata": {
         "id": "OIYXLXtoCjxq"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +65,7 @@
         "id": "zI5wOkRz7gZK",
         "outputId": "ef997d74-7f18-4d7b-ad8d-fa587fe1437e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,6 +85,7 @@
       "source": [
         "## `nn.ModuleList`\n",
         "- `nn.Module`을 list처럼 다룰 수 있음.\n",
+        "- 반복문 통해 순차적으로 모듈 적용에 유리\n",
         "- list에 포함된 모듈을 올바르게 등록되고 관리됨.\n",
         "- model parameter 자동 추적\n",
         "- `to()`, `cuda()`, `cpu()`와 같은 method 사용 가능."
@@ -132,7 +121,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,6 +143,7 @@
       "source": [
         "## `nn.ModuleDict`\n",
         "- `nn.Module`을 dictionary처럼 다룰 수 있음.\n",
+        "- 키를 사용하여 모듈에 접근할 때 유용\n",
         "- list에 포함된 모듈을 올바르게 등록되고 관리됨.\n",
         "- model parameter 자동 추적\n",
         "- `to()`, `cuda()`, `cpu()`와 같은 method 사용 가능.\n",
@@ -191,7 +181,7 @@
         "id": "ZK35rvCX-Ibi",
         "outputId": "5e655273-9761-4524-c2ac-0f34fdfb183b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
