FEAT: add logsoftmax code

--- a/25-activation_functions.ipynb
+++ b/25-activation_functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzIOV9vn7bczRMNXyAWvJ3",
+      "authorship_tag": "ABX9TyOqtVeyQ9RuFXRCiAiZP1Fr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,14 +126,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "993e20ab-c584-40c1-b9d8-e12c33491766"
+        "outputId": "3c66dce5-54b2-4a3f-c6a6-46df6252f753"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "leaky relu outputs: tensor([0.8808, 0.2689, 0.6225])\n"
+            "leaky relu outputs: tensor([0.88, 0.27, 0.62])\n"
           ]
         }
       ],
@@ -151,7 +151,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 448
         },
-        "outputId": "868d4f34-f2d7-4e18-99af-baea7ee6b824"
+        "outputId": "8d736442-68fb-488c-8b5f-9f5c3528298c"
       },
       "outputs": [
         {
@@ -200,7 +200,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "08dbf9e6-543c-4993-aac4-c7301bb5f439"
+        "outputId": "993753b7-e2f0-4153-c68d-a542ef0ff44f"
       },
       "outputs": [
         {
@@ -225,7 +225,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 448
         },
-        "outputId": "f4819469-d9ad-4371-dc84-d66e830135cd"
+        "outputId": "017ab953-8d25-4b94-9862-efed6c5934f2"
       },
       "outputs": [
         {
@@ -274,7 +274,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "74ffe962-007a-4de8-d5c4-fcdb945706a5"
+        "outputId": "f4aed67a-7576-4101-9051-b17d20c248dc"
       },
       "outputs": [
         {
@@ -299,7 +299,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 448
         },
-        "outputId": "46fdc474-597d-4fe4-c37a-ceedf41da202"
+        "outputId": "db962f4a-d01b-45b2-9c2a-bf6b50967adb"
       },
       "outputs": [
         {
@@ -347,7 +347,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f1cc4ab1-fdc5-441b-e981-e88f2222f89e"
+        "outputId": "3f47ca9d-4eb1-417a-dd70-165ca54bdde2"
       },
       "outputs": [
         {
@@ -372,7 +372,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 448
         },
-        "outputId": "011e3a75-1b30-480f-a444-bf4ef63881ae"
+        "outputId": "edf27460-79c2-4c9b-c33d-4bdf33ee593d"
       },
       "outputs": [
         {
@@ -431,7 +431,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d80af71d-415f-4a33-f14e-c388d4d98519"
+        "outputId": "756cc5f5-68ab-49fd-bed1-43f6ecdd1556"
       },
       "outputs": [
         {
@@ -456,7 +456,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "494219a0-5cb7-41b7-8ae2-3e585b6a3e36"
+        "outputId": "532aa813-b786-4373-ed0b-65b7698a41c7"
       },
       "outputs": [
         {
@@ -496,7 +496,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ddf6deac-ca7e-4faa-c3b2-8f01d81c553b"
+        "outputId": "18f0b04e-4dc0-4544-8f21-84a349363b30"
       },
       "outputs": [
         {
@@ -510,6 +510,31 @@
       "source": [
         "log_softmax_outputs = F.log_softmax(logits, dim=0)\n",
         "print('LogSoftmax outputs:', log_softmax_outputs)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "log_softmax = torch.nn.LogSoftmax(dim=0)\n",
+        "output = log_softmax(logits)\n",
+        "print('LogSoftmax outputs:', output)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CxggrzdN0ZkH",
+        "outputId": "e918ca5d-b764-4f54-afe6-0367c1892099"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "LogSoftmax outputs: tensor([-0.24, -3.24, -1.74])\n"
+          ]
+        }
       ]
     },
     {
