FEAT: add description for cross entropy loss

--- a/26-loss_functions.ipynb
+++ b/26-loss_functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0TcfSW8zCPSGKXvuwTORB",
+      "authorship_tag": "ABX9TyOeBPaeAgbHY9j0xgAGO3KF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "UL_2NAbcGEIT"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,12 +73,25 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Cross Entropy Loss\n",
+        "분류 문제에서 모델의 예측이 실제 레이블과 얼마나 잘 일치하는지 측정\n",
+        "- 모델의 예측 확률 분포와 실제 레이블의 확률 분포 사이의 차이 측정\n",
+        "- 예측 확률 분포가 실제 분포 얼마나 잘 표현하는지 측정"
+      ],
+      "metadata": {
+        "id": "GdtGX27g2xND"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "daYlkZr1SfMF"
       },
       "source": [
         "## BCELoss\n",
-        "binary classification에 사용.\n",
+        "Binary Cross Entropy Loss\n",
+        "- binary classification에 사용.\n",
         "- model의 출력이 0과 1 사이 값이어야 하기 때문에 출력으로 sigmoid 사용.\n",
         "- pred: sigmoid\n",
         "- label: 0과 1 사이의 실제 라벨값"
@@ -86,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "35ut6qv2Se40",
         "colab": {
@@ -134,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "3ra2a870SZdb",
         "colab": {
@@ -187,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "OsY8asbLSoOW",
         "colab": {
@@ -231,13 +244,15 @@
         "## NLLLoss\n",
         "Negative Log Likelihood Loss\n",
         "- 주로 LogSoftmax와 함께 사용됨.\n",
+        "- softmax로 얻어진 확률분포에 해당하는 vector를 likelihood라고 생각하면\n",
+        "- 모델이 정답인 class의 likelihood를 극대화하도록 최적화\n",
         "- input: log 확률\n",
         "- output: class index"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "Ugm5BaicS81v",
         "colab": {
@@ -257,7 +272,7 @@
       "source": [
         "# 모델 출력\n",
         "logits = torch.tensor(\n",
-        "\t[[0.1, 0.2, 0.7], # max idx 2\n",
+        "\t\t\t[[0.1, 0.2, 0.7], # max idx 2\n",
         "     \t [0.8, 0.1, 0.1], # max idx 0\n",
         "     \t [0.3, 0.5, 0.2]], # max idx 1\n",
         "    \trequires_grad=True).float()\n",
@@ -277,7 +292,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Multiple-label Classification"
+        "# Multiple-label Classification\n",
+        "- 하나의 sample이 여러 개의 class에 동시에 속할 수 있는 classification."
       ],
       "metadata": {
         "id": "BEY06cQDoSGw"
@@ -288,7 +304,6 @@
       "source": [
         "## MultiLabelSoftMarginLoss\n",
         "### Multi-label Classification을 위한 loss function.\n",
-        "- 하나의 sample이 여러 개의 class에 동시에 속할 수 있는 classification.\n",
         "- 각 클래스 레이블을 각각 독립적인 binary classification으로 취급.\n",
         "- input: model의 logit vector output(클래스 각각의 예측값)\n",
         "- 내부적으로 logistic function을 적용하여 이를 [0, 1] 범위의 확률로 변환.\n",
@@ -345,7 +360,7 @@
         "id": "OtXT8wgKB9WZ",
         "outputId": "e5db3b52-c8c6-4708-ef56-01006670bf76"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +375,7 @@
       "cell_type": "markdown",
       "source": [
         "## Sigmoid+BCELoss와의 차이점\n",
-        "| | MultiLabelSoftMarginLoss|BCELoss|\n",
+        "| | MultiLabelSoftMarginLoss|Sigmoid+BCELoss|\n",
         "|---|---|---|\n",
         "|sigmoid|내부|외부에서 필요|\n",
         "|classification|multi-label|binary|\n",
